# ollacs

./: .gitignore  CONTRIBUTING.md  README.md  WARP.md  build_installers.ps1
.github/workflows/: build.yml
config/: config.example.yaml
go-tools/: go.mod
go-tools/cmd/ollctl/: main.go
rust-core/: Cargo.toml  MustReadMe.md
rust-core/agent/: Cargo.toml
rust-core/agent/src/: main.rs
rust-core/agent/wix/: main.wxs
rust-core/core/: Cargo.toml
rust-core/core/src/: lib.rs
rust-core/platform-common/: Cargo.toml
rust-core/platform-common/src/: lib.rs
rust-core/platform-linux/: Cargo.toml
rust-core/platform-linux/src/: lib.rs
rust-core/platform-macos/: Cargo.toml
rust-core/platform-macos/src/: lib.rs
rust-core/platform-win/: Cargo.toml
rust-core/platform-win/src/: lib.rs
workflows/: build.yml
