[package]
name = "platform-win"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-common = { path = "../platform-common" }
wmi = "0.12"
winreg = "=0.50.0"
walkdir = "=2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "=0.4.31"
winapi-util = "=0.1.6"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
